# spacetime-lab

./: .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  ROADMAP-v3.md  ROADMAP.md  SECURITY.md  pyproject.toml  render.yaml  vercel.json
.agent/: README.md
.agent/_wrapper/: mcp_server.py  migrate-to-service.ps1  setup-runner.ps1  summarize_runs.py  track_usage.py  wg_keygen.py  write_latest.py
.agent/rules/: commit-and-release-style.md  physics-builder-methodology.md
.agent/runs/: LATEST.md  _summary.jsonl
.agent/vps-deploy/: README.md  deploy-to-vps.sh
.agent/workflows/: _smoke-aider.md  bootstrap-new-project.md  check-deploys.md  ship-patch.md  verify-before-code.md
.github/workflows/: bootstrap-new-project.yml  claude-dispatch.yml  dispatch-with-ollama.yml
backend/: requirements.txt
backend/app/: __init__.py  main.py
docs/: arxiv-draft.md  arxiv-endorser-strategy.md  launch-blog.md  launch-postmortem-2026-04-30.md  launch-r-python.md  launch-submissions.md  v3.1-ligo-ringdown-spec.md  v3.2-flrw-de-sitter-spec.md  v3.3-hrt-covariant-spec.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  EffectivePotential.jsx  main.jsx
notebooks/: 01_schwarzschild_basics.ipynb  02_penrose_diagrams.ipynb  03_kerr_geodesics.ipynb  04_horizon_topology.ipynb  05_quasinormal_modes.ipynb  06_entanglement_entropy.ipynb  07_ads_cft_foundations.ipynb  08_holographic_phase_transitions.ipynb  09_island_formula.ipynb  10_evaporating_page_curve.ipynb  11_kerr_qnm_spectroscopy.ipynb  12_rotating_btz.ipynb  13_penrose_renderers.ipynb  14_quantum_extremal_surfaces.ipynb  15_v2_1_dynamics.ipynb
spacetime_lab/: __init__.py
spacetime_lab/diagrams/: __init__.py  penrose.py  render.py
spacetime_lab/entropy/: __init__.py  density.py  schmidt.py  von_neumann.py
spacetime_lab/geodesics/: __init__.py  symplectic.py
spacetime_lab/holography/: btz.py  (+10 more)
tests/: test_api_ads_holography.py  test_api_btz_penrose.py  test_api_de_sitter.py  test_api_geodesics.py  test_api_kerr.py  test_api_kerr_newman.py  test_api_reissner_nordstrom.py  test_de_sitter.py  test_diagrams_minkowski.py  test_diagrams_schwarzschild.py  test_entropy.py  test_geodesics_kerr.py  test_holography.py  test_horizons.py  test_kerr.py  test_kerr_newman.py  test_phase8.py  test_phase9.py  test_phase_v1_1.py  test_phase_v1_2.py  test_phase_v1_3.py  test_phase_v1_5.py  test_phase_v2_0.py  test_phase_v2_1.py  test_reissner_nordstrom.py  test_schwarzschild.py  test_waves.py
(+47 files in other folders)
